package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")


ts_project(
    name = "hello_server",
    srcs = glob(["**/*.ts", "**/*.d.ts", "**/*.tsx"], exclude=["**/*.unit.ts", "**/*.unit.tsx"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
    ],
)

nodejs_binary(
    name = "serve",
    entry_point = "//server:main.js",
    templated_args = [
        "--node_options=--experimental-modules",
        "--nobazel_patch_module_resolver",
        "--root", 
        "client",
        "qoot/integration/hello_server",
    ],
    data = [
        ":hello_server",
        "//server",
        "//client",
        "//client:loader",
    ],
)