package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")


ts_project(
    name = "hello_server",
    srcs = glob(["**/*.ts", "**/*.d.ts", "**/*.tsx"], exclude=["**/*.unit.ts", "**/*.unit.tsx"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
    ],
)

