package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")


ts_project(
    name = "hello_static",
    srcs = glob(["**/*.ts"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
    ],
)

copy_to_bin(
    name = "static_files",
    srcs = [
        "index.html",
    ]
)

nodejs_binary(
    name = "server",
    entry_point = "//server:main.js",
    templated_args = [
        "--node_options=--experimental-modules",
        "--nobazel_patch_module_resolver",
        "--root", 
        "client",
        "qoot/integration/hello_static", 
    ],
    data = [
        ":static_files",
        ":hello_static",
        "//server",
        "//client",
        "//client:loader",
    ],
)