package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")


ts_project(
    name = "todo",
    srcs = glob(["**/*.ts", "**/*.d.ts", "**/*.tsx"], exclude=["**/*.unit.ts", "**/*.unit.tsx"]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//client",
    ],
)

copy_to_bin(
    name = "static_files",
    srcs = [
        # "@npm//:node_modules/todomvc-common/base.css",
        # "@npm//:node_modules/todomvc-app-css/index.css",
        "base.css",
        "index.css",
    ]
)
