load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//mocha:index.bzl", "mocha_test")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "core",
    package_name = "@builder.io/qwik",
    srcs = ["package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.unit.ts",
            "CONFIG.ts",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    # TODO: https://bazelbuild.github.io/rules_nodejs/TypeScript.html#ts_project-supports_workers
)

filegroup(
    name = "project.d.ts",
    srcs = [":project"],
    output_group = "types",
)

ts_project(
    name = "CONFIG",
    srcs = ["CONFIG.ts"],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [":core"],
)

ts_project(
    name = "unit_lib",
    srcs = glob([
        "**/*.unit.ts",
        "**/*.unit.tsx",
    ]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":CONFIG",
        "//src/core/testing",
        "@npm//@types/chai",
        "@npm//@types/mocha",
    ],
)

mocha_test(
    name = "unit",
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        "//src/core/testing",
        "@npm//chai",
        "@npm//domino",
    ],
    tags = ["unit"],
)
