load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//mocha:index.bzl", "mocha_test")

package(default_visibility = ["//visibility:public"])

# Purpose of this target is to add `package.json` which tells node that we have ESM code.
js_library(
    name = "core",
    srcs = ["package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "**/*.unit.ts",
            "CONFIG.ts",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    # TODO: https://bazelbuild.github.io/rules_nodejs/TypeScript.html#ts_project-supports_workers
)

ts_project(
    name = "CONFIG",
    srcs = ["CONFIG.ts"],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [":core"],
)

ts_project(
    name = "unit_lib",
    srcs = glob([
        "**/*.unit.ts",
        "**/*.unit.tsx",
    ]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":CONFIG",
        ":core",
        "//src/core/testing",
        "@npm//@types/chai",
        "@npm//@types/mocha",
    ],
)

mocha_test(
    name = "unit",
    args = ["**/*.unit.js"],
    data = [
        ":unit_lib",
        "//src/core/testing",
        "@npm//chai",
        "@npm//domino",
    ],
    tags = ["unit"],
)
