package(default_visibility = ["//visibility:public"])

load("@npm//jasmine:index.bzl", "jasmine_test")
load("@npm//mocha:index.bzl", "mocha_test")
load("@npm//jest:index.bzl", "jest_test")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "jsx",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.ts"], exclude=["**/*.unit.ts"]),
)
js_library(
    name = "jsx_lib",
    deps = [
        ":jsx",
    ],
)

ts_project(
    name = "jsx_unit",
    tsconfig = "//:tsconfig",
    declaration = True,
    srcs = glob(["**/*.unit.ts"]),
    deps = [
        ":jsx",
        "@npm//@types/mocha",
        "@npm//@types/chai",
        "@npm//chai",
    ]
)

js_library(
    name = "jsx_unit_lib",
    package_name = "qoot_client_render_jsx",
    srcs = ["package.json"],
    deps = [
        ":jsx_unit",
    ],
)

jest_test(
    name = "unit_jest",
    tags = ["unit"],
    data = [
        "//:jest.config.js",
        ":jsx_unit_lib",
    ],
)

mocha_test(
    name = "unit_mocha",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":jsx_unit_lib",
    ],
)

jasmine_test(
    name = "unit_jasmine",
    tags = ["unit"],
    args = ["**/*.unit.js"],
    data = [
        ":jsx_unit_lib",
    ],
)
