load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//mocha:index.bzl", "mocha_test")

package(default_visibility = ["//visibility:public"])

# TODO: This package should have public API and test for public API stabality

# Purpose of this target is to add `package.json` which tells node that we have ESM code.
js_library(
    name = "testing",
    srcs = ["package.json"],
    deps = [
        ":project",
    ],
)

ts_project(
    name = "project",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.unit.ts",
            "**/*.unit.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//src/core",
        "@npm//@types/source-map-support",
        "@npm//domino",
        "@npm//source-map-support",
    ],
)

ts_project(
    name = "unit_project",
    srcs = glob([
        "**/*.unit.ts",
        "**/*.unit.tsx",
    ]),
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":testing",
        "@npm//@types/chai",
        "@npm//@types/mocha",
        "@npm//chai",
    ],
)

# Purpose of this target is to add `package.json` which tells node that we have ESM code.
js_library(
    name = "unit_lib",
    srcs = ["package.json"],
    deps = [
        ":unit_project",
    ],
)

mocha_test(
    name = "unit",
    args = ["**/*.unit.js"],
    data = [
        ":testing",
        ":unit_lib",
        "@npm//chai",
        "@npm//domino",
    ],
    tags = ["unit"],
)
